[metadata]
name = SolarGUI
version = 0.1.7
url = https://github.com/syedalimohsinbukhari/SolarGUI
author = Syed Ali Mohsin Bukhari, Astrophysics and Python
author_email = syedali.b@outlook.com, astrophysicsandpython@gmail.com
license = MIT
license_files = LICENSE
description = A program which contains information about the solar system planets, moon, pluto, Sun, and more.
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
package_dir =
    = src

packages = find:
python_requires = ">= 3.7.*, <3.10.*"

install_requires =
    astropy~=4.3.1
    numpy~=1.21.6
    setuptools~=59.6.0
;    pillow~=9.1.1

[options.packages.find]
where = src

classifiers =
    License :: OSI Approved :: CC License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
